# medical-triage

./: README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
app/: api.py  baseline.py  cases.py  environment.py  grader.py  models.py
server/: app.py
