[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medical-triage-openenv"
version = "1.0.0"
description = "OpenEnv Medical Triage - AI agent environment for emergency room triage decisions"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "openai",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "hypothesis",
]
